// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00676D",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      My Button!
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a Tertiary button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#6EC5B8",
        "borderColor": "#6EC5B8",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Tertiary Action
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a bordered button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={true}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#00676D",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Ghost Button
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a disabled button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={true}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00676D",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 0.5,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Disabled Button 😭
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a ghost button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={true}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#303030",
        "borderRadius": 60,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Ghost Button
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a ghost pill button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={true}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#303030",
        "borderRadius": 60,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Ghost Button
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a loading state 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00676D",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#FFFFFF"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
</View>
`;

exports[`The Button component should render a pill button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00676D",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Pill Button
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a primary button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#00676D",
        "borderColor": "#00676D",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Primary Action
    </Text>
  </View>
</View>
`;

exports[`The Button component should render a secondary button 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#17B582",
        "borderColor": "#17B582",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      Secondary Action
    </Text>
  </View>
</View>
`;

exports[`The Button component should render as default type 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    bordered={false}
    disabled={false}
    pill={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#A5A5A5",
        "borderColor": "#A5A5A5",
        "borderRadius": 60,
        "borderWidth": 2,
        "elevation": 2,
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Bold",
          "fontSize": 16,
          "lineHeight": 23.04,
        }
      }
    >
      My Button!
    </Text>
  </View>
</View>
`;

exports[`The Button component should render with children 1`] = `
<View
  bordered={false}
  disabled={false}
  pill={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00676D",
      "borderColor": "#00676D",
      "borderRadius": 60,
      "borderWidth": 2,
      "elevation": 2,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 20,
    }
  }
>
  <View />
</View>
`;
